<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Spinner
            android:layout_width="195dp"
            android:layout_height="33dp" android:id="@+id/sizeSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/appIcon"
            android:layout_marginTop="36dp"/>
    <TextView
            android:text="@string/appheading_labeltext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/app_heading"
            tools:text="Pizza Order" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="52dp" app:layout_constraintHorizontal_bias="0.499" android:textSize="24sp"/>
    <Switch
            android:text="@string/deliveryswitch_labeltext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/switch_delivery"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbx_veg" android:layout_marginTop="12dp"/>
    <TextView
            android:text="@string/sizespinner_labeltext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/label_sizeSpinner"
            app:layout_constraintTop_toBottomOf="@+id/appIcon"
            app:layout_constraintBottom_toTopOf="@+id/sizeSpinner" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.36"/>
    <TextView
            android:text="@string/toppings_labeltext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/label_toppings"
            app:layout_constraintTop_toBottomOf="@+id/sizeSpinner" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="12dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/pizza_fg" android:id="@+id/appIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/app_heading"
            android:layout_marginTop="4dp" app:layout_constraintHorizontal_bias="0.518"/>
    <androidx.appcompat.widget.Toolbar
            android:layout_width="736dp"
            android:layout_height="48dp"
            android:background="#75BAB1"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/orderbutton_text"
            android:layout_width="80dp"
            android:layout_height="42dp" android:id="@+id/button_order"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/orderTotal_labeltext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/orderTotal"
            android:textSize="24sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/input_address"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/label_address"
            app:layout_constraintVertical_bias="0.045"/>
    <TextView
            android:text="@string/address_labeltext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/label_address"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deliveryDetailsHeading" android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:text="@string/deliverydetailsheading_labeltext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/deliveryDetailsHeading"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="4dp"/>
    <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/switch_delivery"
            android:layout_marginTop="8dp"/>
    <CheckBox
            android:text="@string/toppingsradio_meat_labeltext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/checkbx_meat"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_toppings" android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.498"/>
    <CheckBox
            android:text="@string/toppingsradio_veg_labeltext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/checkbx_veg"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbx_cheese"/>
    <CheckBox
            android:text="@string/toppingsradio_cheese_labeltext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/checkbx_cheese"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbx_meat"/>
</androidx.constraintlayout.widget.ConstraintLayout>